force-app/main/default/objects/Set_List_Song__c/Set_List_Song__c.object-meta.xml
<CustomObject>
    <label>Set List Song</label>
    <nameField>
        <displayFormat>Set List Song-{00000}</displayFormat>
        <label>Set List Song Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Set List Songs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>