force-app/main/default/objects/Set_List_Song__c/fields/Good_Cheat_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Good_Cheat_Sheet__c</fullName>
    <formula>Song__r.Good_Cheat_Sheet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Good Cheat Sheet</label>
    <type>Checkbox</type>
</CustomField>