force-app/main/default/objects/Set_List_Song__c/fields/Set_List__c.field-meta.xml
<CustomField>
    <fullName>Set_List__c</fullName>
    <label>Set List</label>
    <referenceTo>Set_List__c</referenceTo>
    <relationshipLabel>Set List Songs</relationshipLabel>
    <relationshipName>Set_List_Songs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>