force-app/main/default/objects/Set_List_Song__c/fields/Song__c.field-meta.xml
<CustomField>
    <fullName>Song__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Song</label>
    <referenceTo>Song__c</referenceTo>
    <relationshipLabel>Set List Songs</relationshipLabel>
    <relationshipName>Set_List_Songs</relationshipName>
    <type>Lookup</type>
</CustomField>